# vpm-enterprise

./: .gitignore  Cargo.toml  README.md  install.sh  installer.iss  test_commands.sh
.github/workflows/: release.yml  upload_assets.yml
macos-installer/: Distribution.xml  conclusion.rtf  welcome.rtf
macos-installer/VPM Pro.pkg/: PackageInfo.xml
macos-installer/VPM Pro.pkg/scripts/: postinstall
src/: config_man.rs  embedding.rs  license.rs  main.rs  toml.rs
src/cmd/: chat.rs  chipyard.rs  cmd.rs  config.rs  docs.rs  include.rs  init.rs  install.rs  load.rs  mod.rs  remove.rs  restructure.rs  sim.rs  synth.rs  test.rs  tune.rs  update.rs  upgrade.rs
