[package]
description = "A powerful package manager for Verilog projects, streamlining IP core management and accelerating hardware design workflows"
documentation = "https://github.com/getinstachip/vpm#readme"
homepage = "https://getinstachip.com"
repository = "https://github.com/getinstachip/vpm"
name = "vpm"
version = "0.2.26"
edition = "2021"
license = "MIT"
copyright = "Copyright (c) 2024 Instachip"
authors = ["Instachip <team@getinstachip.com>"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.208", features = ["derive"] }
anyhow = "1.0.86"
serde_json = "1.0.125"
walkdir = "2.5.0"
tempfile = "3.12.0"
fastrand = "2.1.1"
fancy-regex = "0.13.0"
fuzzy-matcher = "0.3.7"
indicatif = "0.17.8"
regex = "1.10.6"
toml_edit = "0.22.21"
imara-diff = "0.1.7"
uuid = { version = "1.10.0", features = ["v7"] }
directories = "5.0.1"
machine-uid = "0.5.3"
rpassword = "7.3.1"
parsv = { git = "https://github.com/getinstachip/parsv.git", branch = "main" }
# parsv = { path = "../parsv" }
dotenv = "0.15.0"
crossterm = "0.28.1"

[build-dependencies]
cc="*"
